import stripAnsi from 'strip-ansi';
import { Task } from '../src/task';
import { TaskTree } from '../src/tasktree';
import { Template } from '../src/template';

const tree = TaskTree.tree();
// TODO: test for Template
const template = new Template();
const titles = ['Task1', 'Task2', 'Task3'];

let tasks: Task[];

describe('TaskTree', (): void => {
    it('creating', (): void => {
        expect(tree).not.toBeUndefined();

        tree.start(true);
        tasks = titles.map((title): Task => tree.add(title));
    });

    it('manage', (): void => {
        const result = tasks.reverse().every(
            (task, index): boolean => {
                expect(task.isPending()).toBeTruthy();
                expect(task.render(template).length).toBeGreaterThan(1);

                task.log(`Log ${index}`).warn(`Warn ${index}`);

                switch (index) {
                    case 0:
                        task.skip();
                        break;
                    case tasks.length - 1:
                        task.error(new Error('Something bad happened').stack).fail();
                        break;
                    default:
                        task.complete();
                        break;
                }

                return !task.isPending();
            }
        );

        expect(result).toBeTruthy();
    });

    it('render', (): void => {
        expect(stripAnsi(tree.render())).toMatchSnapshot();
        tree.stop(true);
        expect(stripAnsi(tree.render())).toMatchSnapshot();

        tree.start(true);
        tree.stop(true);
        expect(stripAnsi(tree.render())).toMatchSnapshot();
    });
});
